<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Estimator">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="11dp"
                android:background="@android:color/background_light"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/enter_body_weight"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView16" />

            <fragment
                android:id="@+id/fragment"
                android:name="com.example.wrl123u.drinkrecipes.BlankFragment"
                android:layout_width="0dp"
                android:layout_height="85dp"
                android:layout_marginTop="28dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calc_btn" />

            <EditText
                android:id="@+id/hours_txt"
                android:layout_width="55dp"
                android:layout_height="38dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/weight_back"
                android:ems="10"
                android:gravity="center_horizontal|center_vertical"
                android:hint="1.0"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toStartOf="@+id/textView18"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/background_light"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/enter_num_drinks"
                android:textAlignment="gravity"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/wine"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/textView13" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="720dp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/background_light"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/man_woman"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weight_txt" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/title"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/dbl_shot"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/textView15" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="25dp" />

            <EditText
                android:id="@+id/beer_txt"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/spinner_back"
                android:ems="10"
                android:gravity="center_horizontal|center_vertical"
                android:hint="0"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="16dp"
                android:text="@string/pounds"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/weight_txt"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <Button
                android:id="@+id/calc_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/calc_button_back"
                android:onClick="calculate"
                android:text="@string/calc"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hours_txt" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:text="@string/beer"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <RadioGroup
                android:id="@+id/sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11">

                <RadioButton
                    android:id="@+id/man"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="40dp"
                    android:checked="true"
                    android:text="@string/man"
                    android:textColor="@color/mainText"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toStartOf="@+id/woman"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView11" />

                <RadioButton
                    android:id="@+id/woman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:text="@string/woman"
                    android:textColor="@color/mainText"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/man"
                    app:layout_constraintTop_toBottomOf="@+id/textView11" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="16dp"
                android:text="@string/hours"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/hours_txt"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

            <EditText
                android:id="@+id/weight_txt"
                android:layout_width="55dp"
                android:layout_height="38dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/weight_back"
                android:ems="10"
                android:gravity="center_horizontal|center_vertical"
                android:hint="100"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toStartOf="@+id/textView17"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/mixed"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/textView14" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/background_light"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/length_drinking"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sex" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="25dp" />

            <EditText
                android:id="@+id/shot_txt"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/spinner_back"
                android:ems="10"
                android:gravity="center_horizontal|center_vertical"
                android:hint="0"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/wine_txt" />

            <EditText
                android:id="@+id/wine_txt"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/spinner_back"
                android:ems="10"
                android:gravity="center_horizontal|center_vertical"
                android:hint="0"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/beer_txt" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>